Synchronize libmpcodecs: Support 16bit yuv in telecine filter.

Fixes ticket 1782.